--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "vtex.order-manager": "0.x",
     "vtex.styleguide": "9.x",
-    "vtex.formatted-price": "0.x"
+    "vtex.formatted-price": "0.x",
+    "vtex.checkout-graphql": "0.x"
   },
   "registries": ["smartcheckout"],
   "policies": [],
