--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,10 @@
     "vtex.order-manager": "0.x",
     "vtex.styleguide": "9.x",
     "vtex.formatted-price": "0.x",
-    "vtex.checkout-graphql": "0.x"
+    "vtex.checkout-graphql": "0.x",
+    "vtex.store": "2.x",
+    "vtex.flex-layout": "0.x",
+    "vtex.rich-text": "0.x"
   },
   "registries": ["smartcheckout"],
   "policies": [],
