ci: fix danger ci workflow

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -5,6 +5,7 @@ name: Danger actions
 jobs:
   danger-ci:
     name: Danger CI
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
