--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
   "intl-equalizer": {
     "referenceLocale": "en",
     "localeDirectory": "messages"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
