--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "react": "3.x",
     "messages": "1.x",
     "docs": "0.x",
-    "store": "0.x"
+    "store": "0.x",
+    "checkout-ui-custom": "0.x"
   },
   "dependencies": {
     "vtex.order-manager": "0.x",
@@ -21,5 +22,9 @@
   },
   "registries": ["smartcheckout"],
   "policies": [],
+  "billingOptions": {
+    "type": "free",
+    "availableCountries": ["*"]
+  },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
