--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
     "vtex.checkout-graphql": "0.x",
     "vtex.store": "2.x",
     "vtex.rich-text": "0.x",
-    "vtex.css-handles": "0.x"
+    "vtex.css-handles": "0.x",
+    "vtex.checkout-resources": "0.x"
   },
   "registries": ["smartcheckout"],
   "policies": [],
