--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "messages": "1.x",
     "docs": "0.x",
     "store": "0.x",
-    "checkout-ui-custom": "0.x"
+    "checkout-ui-custom": "0.x",
+    "vtex.storefront-permissions": "1.x"
   },
   "dependencies": {
     "vtex.order-manager": "0.x",
