--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,7 @@
     "messages": "1.x",
     "docs": "0.x",
     "store": "0.x",
-    "checkout-ui-custom": "0.x",
-    "vtex.storefront-permissions": "1.x"
+    "checkout-ui-custom": "0.x"
   },
   "dependencies": {
     "vtex.order-manager": "0.x",
@@ -24,7 +23,8 @@
     "vtex.checkout-resources": "0.x",
     "vtex.b2b-organizations-graphql": "0.x",
     "vtex.shipping-estimate-translator": "2.x",
-    "vtex.store-graphql": "2.x"
+    "vtex.store-graphql": "2.x",
+    "vtex.storefront-permissions-ui": "1.x"
   },
   "registries": ["smartcheckout"],
   "policies": [],
