--- a/store/blocks/store.checkout-b2b.jsonc
+++ b/store/blocks/store.checkout-b2b.jsonc
@@ -33,11 +33,14 @@
   },
   "rich-text#disallowed": {
     "props": {
+      "textPosition": "CENTER",
+      "textColor": "c-danger",
       "text": "**You don't have access to this content**"
     }
   },
   "rich-text#loading": {
     "props": {
+      "textPosition": "CENTER",
       "text": "Waiting for permissions..."
     }
   },
