Feature/minimum quantity (#17)
* feature: minimum-quantity

* feature/minimum-quantity

* feature: add toast and translate message

* fix: disable SSR for GET_ORDER_FORM_SELLERS query in useOrderFormCustom

* fix: add loading state handling in quantity selector and rename variable

* fix: remove lines generated by vtex setup that reference workspace URL to prevent CI errors

* Fix: apply minQuantity only to specific cart items based on productId

* Refactor: optimize QuantitySelector

* fix: change messages

--- a/react/package.json
+++ b/react/package.json
@@ -31,6 +31,7 @@
     "vtex.order-manager": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.order-manager@0.12.0/public/@types/vtex.order-manager",
     "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.134.11/public/@types/vtex.render-runtime",
     "vtex.rich-text": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.rich-text@0.16.0/public/@types/vtex.rich-text",
+    "vtex.search-graphql": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.search-graphql@0.64.0/public/@types/vtex.search-graphql",
     "vtex.shipping-estimate-translator": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.shipping-estimate-translator@2.3.0/public/@types/vtex.shipping-estimate-translator",
     "vtex.store": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.store@2.137.3/public/@types/vtex.store",
     "vtex.store-graphql": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.store-graphql@2.172.1/public/@types/vtex.store-graphql",
