--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,9 @@
     "vtex.shipping-estimate-translator": "2.x",
     "vtex.store-graphql": "2.x",
     "vtex.storefront-permissions-ui": "1.x",
-    "vtex.search-graphql": "0.x"
+    "vtex.search-graphql": "0.x",
+    "vtex.address-form": "4.x",
+    "vtex.country-codes": "2.x"
   },
   "registries": ["smartcheckout"],
   "policies": [],
