--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.2.0",
-    "typescript": "^3.9.6",
-    "vtex.address-form": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.address-form@4.23.3/public/@types/vtex.address-form"
+    "typescript": "^3.9.6"
   },
   "version": "0.0.0",
   "intl-equalizer": {
