feature: Campo custom para endereço de fatura (#28)
* feat: add logistics query and billing address components; update translations and types

* fix: using payment address

* fix: update address handling and improve localization messages

* fix: lint

* fix: changelog

* feat: improving billing address

* docs: update CHANGELOG

* chore: update package.json and yarn.lock

---------

Co-authored-by: Tiago de Andrade Freire <tiago.freire@cubos.io>

--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,8 @@
     "vtex.store-graphql": "2.x",
     "vtex.storefront-permissions-ui": "1.x",
     "vtex.search-graphql": "0.x",
+    "vtex.address-form": "4.x",
+    "vtex.country-codes": "2.x",
     "vtex.session-client": "1.x"
   },
   "registries": ["smartcheckout"],
