--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "post-merge": "yarn && vtex setup --typings && yarn format"
+      "post-merge": "yarn && yarn --cwd react && yarn --cwd node"
     }
   },
   "lint-staged": {
