feat: add role-based margin visibility in checkout (#48)
* feat: add role-based margin visibility in checkout

* refactor: using getAppSettings directly on usePermissions; check canSeeMargin on total margin totalizer

* chore: update role selection to checkbox UI in app settings (admin)

---------

Co-authored-by: Tiago de Andrade Freire <tiago.freire@cubos.io>

--- a/manifest.json
+++ b/manifest.json
@@ -154,6 +154,45 @@
         "description": "Set the discount value to be applied by the sales admin",
         "type": "number",
         "default": 0
+      },
+      "rolesAllowedToSeeMargin": {
+        "title": "Roles allowed to see margin",
+        "description": "Set the roles that are allowed to see the margin in the checkout",
+        "type": "object",
+        "properties": {
+          "store-admin": {
+            "type": "boolean",
+            "title": "Store Admin",
+            "default": true
+          },
+          "sales-admin": {
+            "type": "boolean",
+            "title": "Sales Admin",
+            "default": true
+          },
+          "sales-manager": {
+            "type": "boolean",
+            "title": "Sales Manager",
+            "default": true
+          },
+          "sales-representative": {
+            "type": "boolean",
+            "title": "Sales Representative",
+            "default": true
+          },
+          "customer-admin": {
+            "type": "boolean",
+            "title": "Customer Admin"
+          },
+          "customer-approver": {
+            "type": "boolean",
+            "title": "Customer Approver"
+          },
+          "customer-buyer": {
+            "type": "boolean",
+            "title": "Customer Buyer"
+          }
+        }
       }
     }
   },
