--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
   },
   "eslint.validate": [
     "javascript",
@@ -9,7 +10,6 @@
     "typescript",
     "typescriptreact"
   ],
-  "eslint.alwaysShowStatus": true,
   "eslint.packageManager": "yarn",
   "eslint.workingDirectories": [
     {
