fix: change po number saving; add total label to MultipleOrdersModal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "typescript",
     "typescriptreact"
   ],
+  "eslint.alwaysShowStatus": true,
   "eslint.packageManager": "yarn",
   "eslint.workingDirectories": [
     {
