feat: adjustments on manual price and using bff for update prices

--- a/manifest.json
+++ b/manifest.json
@@ -127,6 +127,12 @@
     },
     {
       "name": "read-workspace-apps"
+    },
+    {
+      "name": "SaveOrderFormConfiguration"
+    },
+    {
+      "name": "AcessaTodosCarrinhos"
     }
   ],
   "billingOptions": {
