--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "description": "Checkout for B2B Stores",
   "builders": {
     "react": "3.x",
+    "admin": "0.x",
     "messages": "1.x",
     "docs": "0.x",
     "store": "0.x",
