feat: representative balance admin (#63)
* add negative balance setting and reps balance table

* feat: allow updating representative balance with overwrite or increment option

* change navigation

* feat: integrate ListUsers query and display all representatives with zero balance by default

* fix: translate messages

* fix: remove column test

* chore: remove unused variable

* refactor: removing try catch from saveRepresentativeBalance

* fix: fix admin representative balances

---------

Co-authored-by: Tiago de Andrade Freire <tiago.freire@cubos.io>

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "description": "Checkout for B2B Stores",
   "builders": {
     "react": "3.x",
+    "admin": "0.x",
     "messages": "1.x",
     "docs": "0.x",
     "store": "0.x",
@@ -214,6 +215,12 @@
             "type": "number",
             "title": "Opening Balance",
             "description": "The monetary value of the representative opening balance"
+          },
+          "allowNegativeBalance": {
+            "type": "boolean",
+            "title": "Allow Negative Representative Balance",
+            "description": "Enable this option to allow the representative's balance to go negative",
+            "default": false
           }
         }
       }
