feat: representative balance (#62)
* feat: masterdata schema and graphql operations for representative balances

* feat: representative balance settings graphql (#59)

* fix: optional openingBalance in representative balance settings (#60)

* fix: fix on saving representative balance settings

* feat: save new representative balance and respective transaction on place order

* feat: using opening balance from settings on get representative balance if not exists

* fix: fix items count; improve layout shifts

* feat: representative balance checkout view (#61)

* feat: create query and start adding representative balance data viewrs to checkout

* fix: style display of Manual Price component

* feat:  dynamically display user balance as representativeBalanceEnabled feature

* feat: implements indicator of credit/debit of account balance

* feat: improve manual price logic by creating custom hook

* feat(i18n): apply internationalization to representative balance data

* fix: resolve some TODO issues

* fix: improve representative balance data

* Revert "fix: improve representative balance data"

This reverts commit e87166a92648d589531c5ee852ce199115ad76b0.

* fix: issues where while changing discount current price wasnt updating

* chore: format code

* fix: using representativeBalanceEnabled from settings

---------

Co-authored-by: Tiago de Andrade Freire <tiago.freire@cubos.io>

* feat: adjusting representative balance display on checkout screen

* fix: using default opening balance without create a new entity if not exists

* fix: fix on save representative balance when it not exists yet

* feat: save representative balance only if roleId is sales-representative

* ci: update actions/cache to v4

* feat: representative balance admin (#63)

* add negative balance setting and reps balance table

* feat: allow updating representative balance with overwrite or increment option

* change navigation

* feat: integrate ListUsers query and display all representatives with

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "description": "Checkout for B2B Stores",
   "builders": {
     "react": "3.x",
+    "admin": "0.x",
     "messages": "1.x",
     "docs": "0.x",
     "store": "0.x",
@@ -140,7 +141,7 @@
     "availableCountries": ["*"]
   },
   "settingsSchema": {
-    "title": "Configurações de Checkout B2B",
+    "title": "Checkout B2B Settings",
     "type": "object",
     "properties": {
       "salesRepresentative": {
@@ -197,6 +198,29 @@
           "customer-buyer": {
             "type": "boolean",
             "title": "Customer Buyer"
+          }
+        }
+      },
+      "representativeBalance": {
+        "title": "Representative Balance Settings",
+        "type": "object",
+        "properties": {
+          "enabled": {
+            "type": "boolean",
+            "title": "Enable Representative Balance",
+            "description": "Enable the Representative Balance feature in the store",
+            "default": false
+          },
+          "openingBalance": {
+            "type": "number",
+            "title": "Opening Balance",
+            "description": "The monetary value of the representative opening balance"
+          },
+          "allowNegativeBalance": {
+            "type": "boolean",
+            "title": "Allow Negative Representative Balance",
+            "description": "Enable this option to allow the representative's balance to go negative",
+            "default": false
           }
         }
       }
