--- a/manifest.json
+++ b/manifest.json
@@ -35,8 +35,7 @@
     "vtex.country-codes": "2.x",
     "vtex.session-client": "1.x",
     "vtex.apps-graphql": "3.x",
-    "vtex.file-manager": "0.x",
-    "vtex.file-manager-graphql": "0.x"
+    "ssesandbox04.file-manager": "0.x"
   },
   "registries": ["smartcheckout"],
   "policies": [
@@ -155,9 +154,6 @@
     },
     {
       "name": "send-message"
-    },
-    {
-      "name": "vtex.file-manager:file-manager-read-write"
     }
   ],
   "billingOptions": {
