--- a/node/package.json
+++ b/node/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@vtex/clients": "^2.21.0",
     "co-body": "^6.0.0",
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.6",
     "ramda": "^0.25.0"
   },
   "devDependencies": {
